contentlayout tested with sidebarlayout as well, plus a fix for z-index being to low in the navigation header. implemented generic and extendable solution in css

--- a/src/components/molecules/Navigation/Navigation.module.scss
+++ b/src/components/molecules/Navigation/Navigation.module.scss
@@ -8,7 +8,7 @@
   &.sticky {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: map-get($zLayers, navigationHeader);
   }
 
   .navLeftContent {
